# control_totals

./: .gitignore  pyproject.toml  scratch.ipynb
configs/: settings.yaml
configs_2026/: settings.yaml
configs_hct_buffers/: settings.yaml
data/: .gitignore  King Growth Targets 2026.csv  Kitsap Growth Targets 2026.csv  Pierce Growth Targets 2026.csv  Snohomish Growth Targets 2026.csv  control_target_lookup.csv  control_target_xwalk.csv  military_bases_control_id_xwalk.csv  regional_geographies_control_id_xwalk.csv  rgid_lookup.csv
r_scripts/: .gitignore  create_control_totals_luv3_rebased_targets.R  interpolate.R  parcels_capacity.R  run_creating_control_totals_from_targets.R  split_ct_to_hct.R
steps/: adjust_targets_to_base_year.py  block_control_area_xwalk.py  block_regional_geography_xwalk.py  create_control_area_geography.py  create_controls.py  emp_chg_targets_no_res_con.py  emp_chg_targets_res_con.py  extrapolate_to_controls_year.py  flag_hct_parcels.py  get_elmer_data.py  king_cnty_targets.py  kitsap_unit_growth_adjustment.py  load_data.py  load_shapefiles.py  parcel_control_area_xwalk.py  prepare_block_data.py  prepare_parcel_data.py  run_parcel_capacity_r_script.py  run_r_scripts.py  split_unincorporated_kitsap_housing_targets.py  units_chg_targets.py
util/: __init__.py  pipeline.py  targets_calculations.py
