[project]
name = "control-totals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "branca>=0.8.2",
    "census>=0.8.25",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pymssql>=2.3.11",
    "pyodbc>=5.3.0",
    "pypyr>=5.9.1",
    "pyyaml>=6.0.3",
    "shapely>=2.1.2",
    "sqlalchemy>=2.0.45",
    "tables>=3.10.2",
    "us>=3.2.0",
]
